# simple_comms

./: Cargo.toml
src/: lib.rs
src/network/: mod.rs  send_receive.rs  utils.rs
src/protocol/: checksum.rs  compression.rs  encode.rs  encryption.rs  flags.rs  header.rs  heartbeat.rs  io_helpers.rs  message.rs  mod.rs  padding.rs  proto.rs  reserved.rs  status.rs
