[package]
name = "simple_comms"
version = "1.2.0"
edition = "2021"
authors = [
    "Artisan Hosting",
    "Darrion Whitfield <dwhitfield@ramfield.net>"
]
description = "Rust implementation of a communication protocol for AH"
homepage = "https://docs.artisanhosting.net"
license = "MIT OR Apache-2.0"

[dependencies]
aes-gcm = "0.10.3"
bincode = "1.3.3"
bitflags = "2.6.0"
colored = "2.2.0"
dusa_collection_utils = "3.2.0"
flate2 = "1.0.35"
get_if_addrs = "0.5.3"
hex = "0.4.3"
rand = "0.8.5"
reqwest = "0.12.9"
serde = "1.0.216"
sha2 = "0.10.8"
tokio = "1.42.0"
